services/api-messenger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-messenger
  labels:
    app: api-messenger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-messenger
  template:
    metadata:
      labels:
        app: api-messenger
    spec:
      containers:
        - name: api-messenger
          image: docker.io/solarianetwork/api-messenger:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
