services/api-messenger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-messenger
  labels:
    app: api-messenger
spec:
  type: ClusterIP
  selector:
    app: api-messenger
  ports:
    - port: 8080
      targetPort: 8080
