services/api-messenger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-messenger
spec:
  ingressClassName: kong
  rules:
    - host: api-messenger.solarianetwork.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-messenger
                port:
                  number: 8080
